@@ -9,6 +9,8 @@ ChangeLog
   turned off (thanks to Wolfgang Woehl for spotting this
   one, while on qjackctl).
 
+* Added CHANNEL_INFO event feedback notification handling.
+
 
 0.1.1   2005-06-12 The mantra of bugfixes.
 
